# PCL-normal-estimation

./: README.md
Code/Normal_Estimation_CUDA/: CMakeLists.txt  estimate_normals_cuda.cpp  estimate_normals_cuda.cu
Code/Normal_Estimation_PCL/: CMakeLists.txt  estimate_normals_pcl.cpp
Code/Normal_Estimation_PCL_CUDA/: CMakeLists.txt  estimate_normals_pcl_cuda.cpp
Code/Normal_Estimation_PCL_OMP/: CMakeLists.txt  estimate_normals_pcl_omp.cpp
Code/Normal_Estimation_Parallel_OMP/: CMakeLists.txt  estimate_normals_omp.cpp
Code/Normal_Estimation_Serial/: CMakeLists.txt  estimate_normals_serial.cpp
